--- a/index.html
+++ b/index.html
@@ -1,108 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Title</title>
+    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>We Thai Resturant & Bar</title>
 
+    <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-
-    <link rel="stylesheet" href="bootstrap4-charming.css" />
-
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:400,900,700,400italic"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="header.css" />
   </head>
-  <body>
-    <!-- Image and text -->
-    <nav class="navbar navbar-light bg-light navsize">
-      <a class="navbar-brand" href="#">
-        <img
-          src="logo.jpg"
-          width="30"
-          height="30"
-          class="d-inline-block align-top"
-          alt=""
-        />
-        We Thai Resturant & Bar
-      </a>
-      <div class="mt-1">
-        <a
-          href="#scroll-target"
-          class="btn btn-accent-1 btn-md my-3 mx-1 text-left"
+  <body class="no-gutter">
+    <body class="container-fluid p-0">
+      <div class="header position-relative">
+        <div
+          class="video embed-responsive embed-responsive-16by9 position-absolute positionTop z1"
         >
-          <span>Location</span>
-        </a>
-
-        <a
-          href="https://www.beyondmenu.com/41328/houston/we-thai-restaurant-and-bar-houston-77077.aspx?utm_source=satellite&utm_medium=home_order&pk_vid=10c9ee2b687255c81580746661745749"
-          class="btn btn-accent-1 btn-md my-3 mx-1 text-left"
+          <iframe
+            width="100%"
+            src="https://www.youtube.com/embed/cNDSX8RPw4w?autoplay=1&mute=1&enablejsapi=1"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <div class="opLayer position-absolute positionTop z10"></div>
+        <div
+          class="position-absolute positionTop w-100 h-100 z15 text-white d-flex  flex-column align-items-center justify-content-center
+        "
         >
-          <span>Order Online</span>
+          <div class="display-2 text-success">We Thai Restaurant & Bar</div>
+          <div class="display-4">Thai Food</div>
+        </div>
+      </div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-success sticky-top">
+        <a class="navbar-brand" href="">
+          <img width="30" src="logo.jpg" alt="" />
         </a>
-      </div>
-    </nav>
-
-    <div
-      id="carouselExampleControls"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 class="display-4">Fluid jumbotron</h1>
-          <p class="lead">
-            This is a modified jumbotron that occupies the entire horizontal
-            space of its parent.
-          </p>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#scroll-target"
+                >Location<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://www.beyondmenu.com/41328/houston/we-thai-restaurant-and-bar-houston-77077.aspx?utm_source=satellite&utm_medium=home_order&pk_vid=10c9ee2b687255c81580746661745749"
+                >Order online!</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="row section h-100 w-100 bg-white p-0 m-0">
+        <div
+          class="col-12 bg-dark d-flex align-items-center justify-content-center"
+        >
+          <div
+            id="carouselExampleControls"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="dish1.jpg" alt="First slide" />
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="dish2.jpg" alt="Second slide" />
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="dish3.jpg" alt="Third slide" />
+              </div>
+            </div>
+            <a
+              class="carousel-control-prev"
+              href="#carouselExampleControls"
+              role="button"
+              data-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#carouselExampleControls"
+              role="button"
+              data-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
       </div>
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="dish1.jpg" alt="First slide" />
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="dish2.jpg" alt="Second slide" />
-        </div>
-        <div class="carousel-item active">
-          <img class="d-block img-fluid" src="dish3.jpg" alt="Third slide" />
-        </div>
-      </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-    <!--Section: Contact v.1-->
-    <section class="section pb-5">
+      <div class="row section h-100 bg-dark d-flex align-items-center justify-content-center">
+   <section class="section pb-5">
       <!--Section heading-->
-      <h2 class="section-heading h1 pt-4 maptext">About us:</h2>
+      <h2 class="section-heading h1 pt-4 maptext text-success">About us:</h2>
       <!--Section description-->
-      <div>
+      <div class="text-white">
         <ul class="section-description pb-4 maptext">
           We Thai Restaurant & Bar offers delicious dining and takeout to
           Houston, TX.
@@ -165,7 +189,7 @@
               </div>
 
               <div class="text-center mt-4">
-                <button class="btn btn-light-blue">Submit</button>
+                <button class="btn btn-success">Submit</button>
               </div>
             </div>
           </div>
@@ -191,7 +215,7 @@
 
           <br />
           <div class="row text-center buttontext">
-            <div class="col-md-4">
+            <div class="col-md-4 text-white">
               <a class="btn-floating blue accent-1"
                 ><i class="fas fa-map-marker-alt"></i
               ></a>
@@ -200,7 +224,7 @@
               <p>United States</p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 text-white">
               <a class="btn-floating blue accent-1"
                 ><i class="fas fa-phone"></i
               ></a>
@@ -209,7 +233,7 @@
               <p>Sat - Sun: 01:00 PM - 09:00 PM</p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 text-white">
               <a class="btn-floating blue accent-1"
                 ><i class="fas fa-envelope"></i
               ></a>
@@ -221,7 +245,9 @@
         <!--Grid column-->
       </div>
     </section>
-
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
