--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>We Thai Restaurant & Bar</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -64,11 +64,11 @@
                 >Location<span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item ">
               <a
                 class="nav-link"
                 href="https://www.beyondmenu.com/41328/houston/we-thai-restaurant-and-bar-houston-77077.aspx?utm_source=satellite&utm_medium=home_order&pk_vid=10c9ee2b687255c81580746661745749"
-                >Order online!</a
+                >Order online</a
               >
             </li>
           </ul>
@@ -123,10 +123,8 @@
       </div>
       <div class="row section h-100 bg-dark d-flex align-items-center justify-content-center">
    <section class="section pb-5">
-      <!--Section heading-->
-      <h2 class="section-heading h1 pt-4 maptext text-success">About us:</h2>
-      <!--Section description-->
       <div class="text-white">
+        <h2 class="section-description pb-4 maptext text-success">About us:</h2>
         <ul class="section-description pb-4 maptext">
           We Thai Restaurant & Bar offers delicious dining and takeout to
           Houston, TX.
