--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
               <a class="btn-floating blue accent-1"
                 ><i class="fas fa-envelope"></i
               ></a>
-              <p>info@gmail.com</p>
-              <p>sale@gmail.com</p>
+              <p>@gmail.com</p>
+              <p>@gmail.com</p>
             </div>
           </div>
         </div>
